Fix problem of truncated number in dashboards

--- a/modules/cstl-admin/grunt/src/less/main.less
+++ b/modules/cstl-admin/grunt/src/less/main.less
@@ -530,6 +530,8 @@ p.error-select-one{
 }
 .dashboard .pagination-wrapper select.nb-per-page {
     width: 65px;
+    padding-left:5px;
+    padding-right:5px;
 }
 .dashboard .pagination-wrapper .pagination {
     margin: 0 5px 0 0;
